# etrm

./: .gitignore  ANALYSIS_LPN_VAR_LOW_VARIANCE.md  BUG_FIX_HYBRID_VARIATIONAL.md  CLAUDE.md  ENCODER_VARIANCE_METRICS.md  LPN_LATENT_DIM_UPDATE.md  README.md  debug.sh  debug_data_loading.py  debug_encoder_output.py  eval_checkpoint.sh  evaluate_checkpoint.py  evaluate_trm_checkpoint.py  find_batch_size.py  jobs-debug.txt  jobs-etrm-overfit-extended.txt  jobs-etrm-overfit.txt  jobs-etrm-semi-final.txt  jobs-etrmtrm-overfit.txt  jobs-etrmtrm.txt  jobs-final.txt  jobs-full.txt  jobs-overfit-corrected.txt  jobs-tl-debug.txt  jobs-variational-kl-fix-verification.txt  jobs.txt  justfile  pretrain.py  pretrain_encoder.py  pretrain_etrm.py  pretrain_etrmtrm.py  puzzle_dataset.py  pyproject.toml  runner.sh  sync_checkpoints.sh
.claude/: .gitignore
config/: cfg_pretrain.yaml  cfg_pretrain_arc_agi_1.yaml  cfg_pretrain_encoder.yaml  cfg_pretrain_encoder_arc_agi_1.yaml  cfg_pretrain_etrm_arc_agi_1.yaml  cfg_pretrain_etrmtrm_arc_agi_1.yaml  cfg_staged_training.yaml  cfg_test_frozen_decoder.yaml  cfg_test_frozen_decoder_corrected.yaml
dataset/: fewshot_puzzle_dataset.py
docs/: CODEBASE_UNDERSTANDING.md  analysis.md  arc-agi-2025-review.md  data_flow.md  dataset.md  etrm-low-performance-investigation.md  etrmtrm_implementation_plan.md  experiment-guide.md  future-work.md  progress_2026_01_09.md  project-description.md  project.md  proposal.md  scratchpad.md  training-path-verification.md  training_modes_comparison.md  trm-checkpoint-fix.md  trm-checkpoint-issue.md  (+2 more)
(+129 files in other folders)
