[project]
name = "tinyrecursivemodels"
version = "0.1.0"
description = "TRM is a recursive reasoning approach that achieves amazing scores of 45% on ARC-AGI-1 and 8% on ARC-AGI-2 using a tiny 7M parameters neural network"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "adam-atan2>=0.0.3",
    "argdantic>=1.3.3",
    "coolname>=2.2.0",
    "einops>=0.8.1",
    "huggingface-hub>=0.35.3",
    "hydra-core>=1.3.2",
    "ninja>=1.13.0",
    "numba>=0.62.1",
    "omegaconf>=2.3.0",
    "packaging>=25.0",
    "pydantic>=2.12.0",
    "pydantic-core>=2.41.1",
    "setuptools>=80.9.0",
    "setuptools-scm>=9.2.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "triton>=3.4.0",
    "wandb>=0.22.2",
    "wheel>=0.45.1",
]
authors = [
    {name = "Alexia Jolicoeur-Martineau"}
]
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/AlexiaJM/TinyRecursiveModels"
Paper = "https://arxiv.org/abs/2510.04871"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "ruff>=0.14.10",
    "seaborn>=0.13.2",
]

[tool.uv.pip]
no-build-isolation-package = ["adam-atan2"]
